--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -238,7 +238,7 @@ margin:0 10px 10px 0;
 
 /*order/index*/
 .order_search{
-  margin-left: 80px;
+  text-align: right;
 }
 .order_index{
   background-color: white;
