--- a/app/views/tunes/new.html.erb
+++ b/app/views/tunes/new.html.erb
@@ -55,16 +55,21 @@
 					<%= fields_for @artist do |a| %>
 					<div class="form-group tune-form-group col-lg-3">
 						<label for="artist_name">アーティスト</label>
-						<%= a.text_field :artist_name, :list => "artist_list", :autocomplete => "off", class: "form-control" %>
-						<datalist id="artist_list">
+						<%= a.text_field :artist_name, :list => "artist_nlist", :autocomplete => "off", class: "form-control" %>
+						<datalist id="artist_nlist">
 							<% @artists.each do |artist| %>
-								<option value="<%= artist.artist_name %>"><%= artist.artist_name %></option>
+								<option value="<%= artist.artist_name %>">
 							<% end %>
 						</datalist>
 					</div>
 					<div class="form-group tune-form-group col-lg-3">
 						<label for="artist_phonetic">ふりがな</label>
-						<%= a.text_field :artist_phonetic, :autocomplete => "off", class: "form-control" %>
+						<%= a.text_field :artist_phonetic, :list => "artist_plist", :autocomplete => "off", class: "form-control" %>
+						<datalist id="artist_plist">
+							<% @artists.each do |artist| %>
+								<option value="<%= artist.artist_phonetic %>">
+							<% end %>
+						</datalist>
 					</div>
 					<% end %>
 					<div class="form-group tune-new-btn col-lg-1">
