--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,22 +82,23 @@
     <%= msg %>
   </div>
   <% end %>
-  
 <%= yield %>
 
 <footer class="clearfix">
+
     <div class="footer">株式会社スクエアミュージック<br>
     	〒444-4444 東京都四角区スクエア4丁目 スクエアレジデンス<br>
     	Tel/Fax 44-4444-4444
-      </div>
-        <div class="footer-link">
+    </div>
+    <div class="footer-link">
       	  <%= link_to "TOPへ" ,root_path ,:style=>"color:white;"%>
       	｜<%= link_to "よくある質問" ,question_path ,:style=>"color:white;"%>
       	｜<%= link_to "お問い合わせ" ,new_contact_path ,:style=>"color:white;"%>
-      </div>
+    </div>
+      	<div class="footer-blank"></div>
 		<div class="footer-logo">
-	  </div>
-    </footer>
-  </body>
+	  	</div>
+</footer>
+</body>
 
 </html>
