--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,19 +11,19 @@
           <td class="td_user"><h4>名前</h4></td><td><h4 class="td_user_text"><%= @user.user_name %></h4></td>
          </tr>
          <tr>
-          <td><h4>かな</h4></td><td><h4 class="td_user_text"><%= @user.user_phonetic %></h4></td>
+          <td class="td_user"><h4>かな</h4></td><td><h4 class="td_user_text"><%= @user.user_phonetic %></h4></td>
          </tr>
          <tr>
-          <td><h4>郵便番号</h4></td><td><h4 class="td_user_text"><%= @user.postal %></h4></td>
+          <td class="td_user"><h4>郵便番号</h4></td><td><h4 class="td_user_text"><%= @user.postal %></h4></td>
          </tr>
          <tr>
-          <td><h4>住所</h4></td><td><h4 class="td_user_text"><%= @user.address %></h4></td>
+          <td class="td_user"><h4>住所</h4></td><td><h4 class="td_user_text"><%= @user.address %></h4></td>
          </tr>
          <tr>
-          <td><h4>電話番号</h4></td><td><h4 class="td_user_text"><%= @user.tell %></h4></td>
+          <td class="td_user"><h4>電話番号</h4></td><td><h4 class="td_user_text"><%= @user.tell %></h4></td>
          </tr>
          <tr>
-          <td><h4>メールアドレス</h4></td><td ><h4 class="td_user_text"><%= @user.email %></h4></td>
+          <td class="td_user"><h4>メールアドレス</h4></td><td ><h4 class="td_user_text"><%= @user.email %></h4></td>
          </tr>
         </table>
         <% if admin_signed_in? %>
