--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -701,9 +701,9 @@ header{
   height: 22px;
 }
 .ranking-image{
-  width: 70%;
+  width: 130px;
   height: 130px;
-  margin: 0 15% 3px 15%;
+  margin: 0 auto 3px ;
   background-color: #e8e8e8;;
 }
 .ranking-artist-text{
