--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,10 +15,13 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+
  * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+
  }
  .clearfix::after {
   content: "";
@@ -81,6 +84,10 @@
  /*以下原*/
 
  /*// 共通レイアウト*/
+ .errors_message {
+   width: 1000px;
+   margin: 0 auto;
+ }
 .message {
   width: 100%;
   font-size: 18px;
@@ -1103,10 +1110,10 @@ footer {
   padding: 40px 0 0 90px;
 }
 .footer-blank{
-  width:4%;
+  width:2%;
 }
 .footer-logo{
-  width: 29%;
+  width: 31%;
   height:100px;
   float:right;
   margin-top:15px;
