--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,81 +27,73 @@
          </tr>
         </table>
         <% if admin_signed_in? %>
-        <div>
-        <% if @user.delete_flag == false %>
-          <%= link_to "退会", "/users/#{@user.id}/soft_delete",class:'btn btn-danger soft_delete_btn', data: {confirm: "本当に退会させてよろしいですか？"} %>
+          <div>
+          <% if @user.delete_flag == false %>
+            <%= link_to "退会", "/users/#{@user.id}/soft_delete",class:'btn btn-danger soft_delete_btn', data: {confirm: "本当に退会させてよろしいですか？"} %>
           <% else %>
-
-           <%= link_to "復旧", "/users/#{@user.id}/restoration",class:'btn btn-danger restoration_btn', data: {confirm: "本当に復旧させてよろしいですか？"}  %>
+             <%= link_to "復旧", "/users/#{@user.id}/restoration",class:'btn btn-danger restoration_btn', data: {confirm: "本当に復旧させてよろしいですか？"}  %>
+          <% end %>
+          </div>
         <% end %>
-      </div>
-      <% end %>
         <%= link_to "登録情報を変更する",edit_user_path ,class:'btn btn-info' %>
         <% if admin_signed_in? %>
-        <% if @unsubscribe_comment %>
-          <h2>退会コメント</h2>
-          <div class="comment"><%= @unsubscribe_comment.comment %></div>
+          <% if @unsubscribe_comment %>
+            <h2>退会コメント</h2>
+            <div class="comment"><%= @unsubscribe_comment.comment %></div>
+          <% end %>
+          <div class="link_tag_1"><% cart = Cart.find_by(user_id: @user.id) %></div>
+      		<%= link_to "カートを見る",cart_path(cart)  %>
+          <div class="link_tag_1">
+          <%= link_to "ユーザー一覧に戻る",users_path %>
+          </div>
         <% end %>
-        <div class="link_tag_1"><% cart = Cart.find_by(user_id: @user.id) %></div>
-    		<%= link_to "カートを見る",cart_path(cart)  %>
-        <div class="link_tag_1">
-        <%= link_to "ユーザー一覧に戻る",users_path %>
-      </div>
-      <% end %>
-   </div>
-
-   <div class="user-box clearfix col-lg-8">
+    </div>
+    <div class="user-box clearfix col-lg-8">
       <h3 class="user-box-headline">購入履歴</h2>
-
-
-
-
-
-<% if @orders %>
-  <%  @orders.each do |order| %>
-  <% order.order_items.each do |f| %>
-  <% @item_count = order.order_items.count - 1 %>
-  <div class="order_content  clearfix">
-    <div class="order_content_head clearfix row">
-      <div class="order_content_1">
-        <h4>購入日</h4>
-        <h4><%= order.created_at.strftime('%Y/%m/%d') %></h4>
-      </div>
-
-      <div class="order_content_2 ">
-        <h4>合計金額</h4>
-        <h4><%= order.total_price%>円</h4>
-      </div>
-      <div class="order_content_3">
-        <h4>購入番号</h4>
-        <h4><%= order.order_number %></h4>
-      </div>
-      <div class="order_content_4">
-        <h4>注文状況</h4>
-        <h4><%= order.status.shipment_status%></h4>
-      </div>
-    </div>
-    <div class="order_content_bottom clearfix">
-
-    <div class="order_content_5"><%= attachment_image_tag f.product, :image, :fill, 90, 90, format: 'jpeg', fallback: 'no_image.jpg', :size => '100x100' %></div>
-      <div class="order_content_product"><h3><%= f.product.product_name %></h3>
-      <h3 ><%= f.product.artist.artist_name %></h3></div>
-
-      <div class="order_content_6">
-        <% if @item_count > 0%>
-        <%= "他#{@item_count}点"%>
+      <% if @orders %>
+        <%  @orders.each do |order| %>
+          <% order.order_items.each do |f| %>
+            <div class="order_content  clearfix">
+              <div class="order_content_head clearfix row">
+                <div class="order_content_1">
+                  <h4>購入日</h4>
+                  <h4><%= order.created_at.strftime('%Y/%m/%d') %></h4>
+                </div>
+                <div class="order_content_2 ">
+                  <h4>合計金額</h4>
+                  <h4><%= order.total_price%>円</h4>
+                </div>
+                <div class="order_content_3">
+                  <h4>購入番号</h4>
+                  <h4><%= order.order_number %></h4>
+                </div>
+                <div class="order_content_4">
+                  <h4>注文状況</h4>
+                  <h4><%= order.status.shipment_status%></h4>
+                </div>
+              </div>
+              <div class="order_content_bottom clearfix">
+                <div class="order_content_5"><%= attachment_image_tag f.product, :image, :fill, 90, 90, format: 'jpeg', fallback: 'no_image.jpg', :size => '100x100' %></div>
+                <div class="order_content_product">
+                  <h3><%= f.product.product_name %></h3>
+                  <h3 ><%= f.product.artist.artist_name %></h3>
+                </div>
+                <div class="order_content_6">
+                  <% @item_count = order.order_items.count - 1 %>
+                  <% if @item_count > 0%>
+                    <%= "他#{@item_count}点"%>
+                  <% end %>
+                  <%= link_to "詳細","/users/#{@user.id}/orders/#{order.id}"%>
+                </div>
+              </div>
+            </div>
+          <% end %>
         <% end %>
-        <%= link_to "詳細","/users/#{@user.id}/orders/#{order.id}"%>
-      </div>
+      <% else %>
+        <h5>表示する履歴はありません</h5>
+      <% end %>
+      <%= paginate @orders, class: "pagenate" %>
     </div>
-
-  </div>
-  <% end %>
-  <% end %>
-
-<% end %>
-<%= paginate @orders, class: "pagenate" %>
-  </div>
   </div>
  </div>
 </div>
