--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -39,19 +39,25 @@
   float:left;
  }
  .order-address{
-  width:420px;
+  width:300px;
   height:30px;
   line-height:30px;
   float:left;
  }
  .order-address1 {
-  width:420px;
+  width:300px;
   float:left;
   line-height: none;
  }
+ .order-payment {
+   width:130px;
+   height:30px;
+   line-height: 30px;
+   float:left;
+ }
  .status {
   text-align:center;
-  float:left;
+  float:right;
   width:200px;
   height:30px;
   line-height: 30px;
@@ -108,7 +114,7 @@
 }
 /*渡辺*/
 .os_table{
-  font-size: 20px;
+  font-size: 16px;
   margin-left: 10px;
 }
 .on_btn{
