--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -19,7 +19,7 @@
 	</div>
 
 <div class="top-box2">
-		<h3 class="sarch-word">検索カテゴリー"<%= @genre.genre_name %>"</h3>
+		<h3 class="sarch-word">カテゴリー"<%= @genre.genre_name %>"</h3>
 	<div class="float-space-onsearch">
 	<% @page_products.each do |product| %>
 
@@ -31,6 +31,8 @@
     		<div>
     			<div class="search-product-name"><%= product.product_name.truncate(17) %></div>
     			<div class="search-product-artist"><%= product.artist.artist_name.truncate(17) %></div>
+    			<div class="search-product-genre"><%= product.genre.genre_name.truncate(17)%></div>
+    			<div class="search-product-stock">残り<%= product.stock.to_s(:delimited) %>個</div>
     			<div class="search-product-price"><%= product.product_price.to_s(:delimited) %>円</div>
     		</div>
    			<% end %>
