--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -791,7 +791,7 @@ header{
 }
 .search-product-name{
   margin: 30px 0 0 10px;
-  font-size: 22px;
+  font-size: 21px;
 }
 .search-product-genre{
   font-size: 15px;
@@ -809,7 +809,7 @@ header{
 }
 .search-product-artist{
   padding-top: 5px;
-  font-size: 22px;
+  font-size: 21px;
 }
 .float-space-onsearch{
   width: 98%;
@@ -891,7 +891,10 @@ header{
   margin: 5px 1% 20px 2%;
   border-top: dashed gray 1px;
 }
-
+.before-release{
+  text-align: center;
+  color: red;
+}
 
 
 
