--- a/app/views/products/top.html.erb
+++ b/app/views/products/top.html.erb
@@ -36,7 +36,7 @@
 
 		<div class="newproduct-space">
 			<div class="product-heading">新着一覧</div>
-			<% @same_genre.order("release DESC").first(5).each do |t| %>
+			<% @same_genre.where("release <= ?", Time.now).order("release DESC").first(5).each do |t| %>
 			<%= link_to product_path(t), :style=>"text-decoration: none; color:black;" do %>
 			<div class="rankin-product">
 				<div class="ranking-integer">発売日：<%= t.release %></div>
