細かい修正

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,7 +51,9 @@
   margin-top:0 !important;
   font-weight: 600;
 }
-
+.pi-wata{
+  text-align: center;
+}
 .pi_box{
   border-bottom: 1px solid gray;
   margin: 0px 15px;
