--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -38,8 +38,8 @@
 		<div class="col-lg-2"></div>
 	</div>
 	<div class="row">
-		<div class="col-sm-5"></div>
-		<div class="col-sm-2"><%= paginate @products, class: "pagenate" %></div>
-		<div class="col-sm-5"></div>
+		<div class="col-sm-4"></div>
+		<div class="col-sm-4 pi-wata"><%= paginate @products, class: "pagenate" %></div>
+		<div class="col-sm-4"></div>
 	</div>
 </div>
