--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -38,7 +38,7 @@
       	        	<%= attachment_image_tag cart_item.product, :image, :fill, 80, 80, format: 'jpeg', fallback: 'no_image.jpg', :size => '80x80' %>
       	         </div>
       	        <div class="preorder-product">
-      	     	   <h4><%= cart_item.product.product_name %></h4>
+      	     	   <h4><%= cart_item.product.product_name.truncate(40) %></h4>
       	           <div class>
       	     	    <h5><%= cart_item.product.artist.artist_name %></h5>
       	          </div>
